--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "json-server": "^1.0.0-alpha.23",
     "jsonwebtoken": "^9.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
