--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
