--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "start-server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.8",
     "json-server": "^1.0.0-alpha.23",
     "jsonwebtoken": "^9.0.2",
+    "memory-cache-node": "^1.4.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^9.0.1"
