--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@types/uuid": "^9.0.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.2",
     "json-server": "^1.0.0-alpha.23",
     "jsonwebtoken": "^9.0.2",
+    "primereact": "^10.6.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "uuid": "^9.0.1"
   },
