--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "start-server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/joy": "^5.0.0-beta.32",
+    "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.1.1",
     "@types/uuid": "^9.0.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.2",
+    "dayjs": "^1.11.10",
     "json-server": "^1.0.0-alpha.23",
     "jsonwebtoken": "^9.0.2",
     "primereact": "^10.6.3",
