--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@canvasjs/charts": "^3.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
     "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/system": "^5.15.15",
+    "@mui/x-charts": "^7.3.0",
+    "@mui/x-data-grid": "^7.3.0",
     "@mui/x-date-pickers": "^7.1.1",
     "@types/uuid": "^9.0.8",
+    "apexcharts": "^3.48.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.2",
@@ -26,22 +33,23 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "sqlite3": "^5.1.7",
+    "styled-components": "^6.1.8",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "@types/next": "^9.0.0",
-    "bootstrap": "^5.3.3",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "bootstrap": "^5.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "next": "14.1.4",
     "postcss": "^8",
+    "react": "^18",
+    "react-dom": "^18",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
