--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.2",
+    "cookie": "^0.6.0",
     "dayjs": "^1.11.10",
     "json-server": "^1.0.0-alpha.23",
     "jsonwebtoken": "^9.0.2",
