--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-charts": "^7.3.0",
     "@mui/x-data-grid": "^7.3.0",
     "@mui/x-date-pickers": "^7.1.1",
+    "@prisma/client": "^5.13.0",
     "@types/uuid": "^9.0.8",
     "apexcharts": "^3.48.0",
     "bootstrap": "^5.3.3",
@@ -29,6 +30,7 @@
     "dayjs": "^1.11.10",
     "json-server": "^1.0.0-alpha.23",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "primereact": "^10.6.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
@@ -41,6 +43,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/next": "^9.0.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -49,6 +52,7 @@
     "eslint-config-next": "14.1.4",
     "next": "14.1.4",
     "postcss": "^8",
+    "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwindcss": "^3.3.0",
