--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-charts": "^7.3.0",
     "@mui/x-data-grid": "^7.3.0",
     "@mui/x-date-pickers": "^7.1.1",
+    "@prisma/client": "^5.13.0",
     "@types/uuid": "^9.0.8",
     "apexcharts": "^3.48.0",
     "bootstrap": "^5.3.3",
@@ -49,6 +50,7 @@
     "eslint-config-next": "14.1.4",
     "next": "14.1.4",
     "postcss": "^8",
+    "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwindcss": "^3.3.0",
