--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dayjs": "^1.11.10",
     "json-server": "^1.0.0-alpha.23",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "primereact": "^10.6.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
