--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^4.4.2",
     "cookie": "^0.6.0",
     "dayjs": "^1.11.10",
+    "express": "^4.21.1",
     "json-server": "^1.0.0-alpha.23",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.13",
@@ -56,5 +57,10 @@
     "react-dom": "^18",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
